<resources>
    <string name="app_name">BMI_calculator</string>\
    <string name="title">Kalkulator BMI</string>
    <string name="title2">Koronawirus</string>
    <string name="btn_wroc">Wróć</string>

    <string name="main_subtitle_info">Twoje BMI wynosi: 0</string>
    <string name="main_btn_BMI">BMI</string>
    <string name="main_btn_dieta">Dieta</string>
    <string name="main_btn_kalorie">Kalorie</string>
    <string name="main_btn_zamknij">Zamknij</string>
    <string name="main_btn_korona">Koronawirus</string>
    <string name="main_footer">Aplikacja mobilna wykonana przez studneta PJATK @S15585</string>

    <string name="bmi_et_waga">twoja waga</string>
    <string name="bmi_txt_waga">Masa [kg]</string>
    <string name="bmi_et_wzrost">twój wzrost</string>
    <string name="bmi_txt_wzrost">Wzrost [cm]</string>
    <string name="bmi_et_wiek">twój wiek</string>
    <string name="bmi_txt_wiek">Wiek</string>
    <string name="bmi_btn_licz">licz</string>

    <string name="bmi_txt_result">BMI: 0</string>
    <string name="bmi_txt_kobieta">Kobieta" "</string>
    <string name="bmi_txt_mezczyzna">Mężczyzna</string>

    <string name="dieta_txt_recipt_header">Rekomendowany przepis</string>
    <string name="dieta_txt_recipt_text">Treść przepisu</string>

    <string name="kalorie_txt_subtitle">KALORIE</string>

    <string name="korona_txt_subtitle">Co cię nie zabije to cię wzmocni</string>
    <string name="korona_btn_quiz">QUIZ</string>
    <string name="korona_btn_gra">GRA</string>
    <string name="korona_btn_chart">WYKRES</string>


    <string name="number_of_choices">Number of Choices</string>
    <string name="number_of_choices_description">Display 2, 4, 6 or 8 guess buttons</string>
    <string name="world_regions">Regions</string>
    <string name="question_description">tresc pytania</string>
    <string name="guess_country">Wybierz odpowiedź</string>
    <string name="results">%1$d guesses, %2$.02f%% correct</string>
    <string name="incorrect_answer">Incorrect!</string>
    <string name="default_region_message">One region must be selected. Setting North America as the default region.</string>
    <string name="restarting_quiz">Quiz will restart with your new settings</string>
    <string name="question">Pytanie %1$d z %2$d</string>
    <string name="reset_quiz">Reset Quiz</string>
    <string name="image_description">Image of the current flag in the quiz</string>
    <string name="default_region">North_America</string>
    <string name="title_activity_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
