<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".DietaActivity">

    <TextView
        android:id="@+id/Header1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="#fff"
        android:textSize="52sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/BMI_txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_subtitle_info"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="22sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/Header1" />

    <TextView
        android:id="@+id/BMI_recipt_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dieta_txt_recipt_header"
        android:layout_marginTop="42dp"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="22sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/BMI_txt2" />

    <TextView
        android:id="@+id/BMI_przepis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dieta_txt_recipt_text"
        android:layout_marginTop="42dp"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="22sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/BMI_recipt_header" />

    <Button

        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/btn_wroc"
        app:layout_constraintEnd_toEndOf="@+id/BMI_przepis"
        app:layout_constraintRight_toRightOf="@+id/BMI_przepis"
        app:layout_constraintStart_toStartOf="@+id/BMI_przepis"
        app:layout_constraintTop_toBottomOf="@+id/BMI_przepis" />


</android.support.constraint.ConstraintLayout>